Enabled HTTP Strict Transport Security.

--- a/docker/httpd/data/ssl.conf
+++ b/docker/httpd/data/ssl.conf
@@ -4,6 +4,8 @@ ServerAlias www.SERVER_NAME
 DocumentRoot /usr/local/apache2/htdocs/client
 
 # Header set Access-Control-Allow-Origin "*"
+RequestHeader set X-Forwarded-Proto "https"
+Header add Strict-Transport-Security "max-age=15768000"
 
 RewriteEngine On
 
