Removed unneeded tools from the application container.

--- a/docker/bob/Dockerfile
+++ b/docker/bob/Dockerfile
@@ -8,7 +8,7 @@ ADD data $JBOSS_HOME/customization/
 # install necessary packages
 USER root
 RUN yum -y update
-RUN yum -y install patch wget tree curl zip unzip
+RUN yum -y install wget
 
 # update nss and java to work around a bug with Diffie-Hellman key agreement of more than 1024 bits
 RUN yum -y upgrade nss java
