--- a/pom.xml
+++ b/pom.xml
@@ -357,4 +357,14 @@
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.5-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
