--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <version.asciidoctor.plugin>1.5.3</version.asciidoctor.plugin>
         <version.jrebel.plugin>1.1.5</version.jrebel.plugin>
         <version.tools>1.4.2</version.tools>
+        <version.findbugs>3.0.5</version.findbugs>
         <path.tools>${java.home}/../lib/tools.jar</path.tools>
     </properties>
     <dependencyManagement>
@@ -363,7 +364,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5-SNAPSHOT</version>
+                <version>${version.findbugs}</version>
             </plugin>
         </plugins>
     </reporting>
