Add back ability to register BE certificates.

--- a/docker/bob/Dockerfile
+++ b/docker/bob/Dockerfile
@@ -6,6 +6,9 @@ ENV JBOSS_HOME=/opt/jboss/wildfly
 ADD data $JBOSS_HOME/customization/
 ADD target/*.war $JBOSS_HOME/customization
 
+# Add mount point for certificates
+RUN mkdir -p $JBOSS_HOME/customization/crt
+
 # install necessary packages
 USER root
 RUN yum -y install wget
